--- a/css/main.css
+++ b/css/main.css
@@ -760,7 +760,7 @@ a{
   }
 
   .about_mobile-pic{
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     background-color: #004CBB;
   }
