--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth;
+}
 
 p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -14,6 +17,16 @@ a{
 	list-style: none;
  }
 
+ .span_i-gray{
+  font-style: italic;
+  color: rgba(42, 42, 42, 0.7);
+ }
+
+ .span_i-white{
+  font-style: italic;
+  color: rgba(255, 255, 255, 0.7);
+ }
+
 .header-color{
   color: #005DE7;
 }
@@ -21,19 +34,20 @@ a{
 .swiper {
 	width: 100%;
 	height: 100%;
-  padding-right: 150px;
+  padding-right: 200px;
 }
+
 
 .swiper-slide {
 	text-align: center;
 	font-size: 18px;
 	
-  border-right: 1px solid #555 ;
+  border-right: 1px solid #fff ;
 	height: auto;
 	display: flex;
   flex-direction: column;
 	text-align: start;
-  width: 100%;
+  width: auto;
 
   padding-right: 50px;
 }
@@ -138,7 +152,7 @@ a{
 	font-size: 16px;
 	line-height: 120%;
 	text-transform: uppercase;
-	color: #000;
+	color: #2A2A2A;
 	padding: 10px;
 	background-color: #E3B7F5;
 }
@@ -241,11 +255,6 @@ a{
 	}
 }
 
-@media (min-width: 821px) {
-	#menu{
-		width: 20%;
-	}
-}
 
 @media (max-width: 500px) {
 	.menu_default{
@@ -332,7 +341,7 @@ a{
 
 .text {
   grid-row: 1 / 2;
-  color: #000;
+  color: #2A2A2A;
   width: 100%;
   text-align: left;
   font-weight: 600;
@@ -386,7 +395,7 @@ a{
 }
 
 .hero_button:hover .arrow path {
-  transition: color 0.2s; 
+  transition: fill 0.2s all; 
   fill: #004CBB; 
 }
 
@@ -482,7 +491,7 @@ a{
     font-size: 16px; /* Размер текста */
     line-height: 1.2;
     text-align: left;
-    color: #000; /* Черный текст */
+    color: #2A2A2A; /* Черный текст */
   }
 
   /* Кнопка занимает всю ширину */
@@ -539,7 +548,7 @@ a{
 
 /* Default Link Style */
 .nav_link{
-  color: black; /* Default color for light sections */
+  color: #2A2A2A; /* Default color for light sections */
   transition: color 0.1s ease;
   text-decoration: none;
 }
@@ -825,7 +834,7 @@ a{
 .values_card p {
   font-weight: 400;
   font-size: 22px;
-  color: #555;
+  color: #2A2A2A;
 }
 
 @media (max-width: 1620px) {
@@ -947,7 +956,7 @@ a{
 
 
 .ri-add-line{
-	color: #000;
+	color: #2A2A2A;
 	display: flex;
   align-items: center;
 	height: 48px;
@@ -1014,14 +1023,14 @@ a{
 .faq-open .faq-header,
 .faq-open .faq-desp {
   /* background-color: #0053d6; */
-  color: #000;
+  color: #2A2A2A;
 
 }
 
 
 .faq-open .faq-desp-wrapper{
   /* background-color: #0053d6; */
-  color: #000;
+  color: #2A2A2A;
 }
 
 .faq-open .faq-desp-content {
@@ -1308,7 +1317,7 @@ a{
 .contact-form label {
   display: block;
   margin-bottom: 5px;
-  color: black;
+  color: #2A2A2A;
   font-size: 20px;
 }
 
@@ -1347,8 +1356,6 @@ a{
 }
 
 .contact-form textarea {
-  resize: none;
-  height: 60px;
   margin-bottom: 50px;
 }
 
@@ -1359,7 +1366,7 @@ a{
   font-weight: 600;
   font-size: 88px;
   letter-spacing: -0.04em;
-  color: black;
+  color: #2A2A2A;
   text-decoration: none;
   background: none;
   padding: 0;
@@ -1368,7 +1375,7 @@ a{
   width: 100%;
   border: 0;
   padding-bottom: 10px;
-  border-bottom: 1px black solid ;
+  border-bottom: 1px #2A2A2A solid ;
 }
 
 .submit-btn{
