--- a/css/main.css
+++ b/css/main.css
@@ -289,7 +289,7 @@ a{
 
 .verus_title{
   width: 80%;
-  height: fit-content;
+  height: auto;
 }
 
 .grid-layout {
@@ -1357,6 +1357,11 @@ a{
 
 .contact-form textarea {
   margin-bottom: 50px;
+  height: auto;            
+  min-height: 1em;         
+  max-height: 30px;         
+  overflow-y: hidden;     
+  line-height: 1.2; 
 }
 
 .contact-form .submit-btn {
